CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(hot)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/release)

# header files
MESSAGE("-- ${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/include/stack
)

# source files
FILE(GLOB CPPFILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)


# extra definitions
# ADD_DEFINITIONS(-DCONFIG_LOG)
# ADD_DEFINITIONS(-DCONFIG_TIME)

# test
# ADD_EXECUTABLE(main ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${CPPFILES})
# TARGET_LINK_LIBRARIES(
#         main
# )

ADD_EXECUTABLE(test ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
TARGET_LINK_LIBRARIES(
        test
)
